page animate js
effect detail js

--- a/hkhl/b2b.html
+++ b/hkhl/b2b.html
@@ -1086,6 +1086,7 @@ a {
                                 </div>
                             </div>
                         </div>
+            <div class="mc mc-title delay_0_0s duration_0_8s movedown" data-type="title" data-anim="movedown" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="3.619047619047619" data-width="228" data-height="63" data-position="0" font-text="文字测试" font-name="汉仪细圆简" font-type="CHS" font-size="52" font-color="#000000" font-bold="0" font-italic="0" font-underline="0" style="left: 201.333333333333px; top: 460.833343505859px; z-index: 1; width: 228px; height: 63px; right: auto; bottom: auto; background-image: none; background-color: transparent;" data-delay="0" data-out-anim="noAnimate"><div class="mc-wrap delay_1_8s duration_0_8s noAnimate" style="position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; background-color: rgba(255, 255, 255, 0.4);"><div class="text-content" style="display:block;width:100%;height:100%;"><a href="" target="_blank" style="position: absolute; left: 0px; top: 0px; z-index: 9; width: 100%; height: 100%; display: none;"></a><img src="http://img14.360buyimg.com/cms/s228x63_jfs/t910/255/644135450/2938/b2c3a05d/55376ef2Nd4433812.png" style="width: 100%; height: auto;"></div></div></div>
 
         </div>
     </div>
