--- a/hkhl/b2b.html
+++ b/hkhl/b2b.html
@@ -1038,6 +1038,24 @@ a {
     .pannels .delay_0_0s{-webkit-transition-delay:0.0s;-o-transition-delay:0.0s;transition-delay:0.0s;-webkit-animation-delay:0.0s;-o-animation-delay:0.0s;animation-delay:0.0s;}
 .pannels .delay_1_8s{-webkit-transition-delay:1.8s;-o-transition-delay:1.8s;transition-delay:1.8s;-webkit-animation-delay:1.8s;-o-animation-delay:1.8s;animation-delay:1.8s;}
 .pannels .duration_0_8s{-webkit-transition-duration:0.8s;-o-transition-duration:0.8s;transition-duration:0.8s;-webkit-animation-duration:0.8s;-o-animation-duration:0.8s;animation-duration:0.8s;}
+
+    /* custom */
+    .title{left:162px;top:135px;width:423px;height:137px;}
+    .p2-cir1{left:539px;top:338px;width:19px;height:19px;}
+    .p2-cir2{left:433px;top:411px;width:26px;height:26px;}
+    .p2-cir4{left:124px;top:622px;width:38px;height:38px;}
+    .p2-cir3{left:657px;top:824px;width:16px;height:16px;}
+    .p2-cir5{left:548px;top:714px;width:37px;height:37px;}
+    .p2-cir6{left:134px;top:796px;width:56px;height:56px;}
+    .p2-cir7{left:124px;top:401px;width:190px;height:190px;}
+    .p2-cir8{left:472px;top:466px;width:164px;height:164px;}
+    .p2-cir9{left:240px;top:574px;width:241px;height:241px;}
+    .p2-text1{left:149px;top:476px;width:118px;height:45px;z-index:11;}
+    .p2-text2{left:506px;top:526px;width:97px;height:46px;z-index:11;}
+    .p2-text3{left:292px;top:630px;width:139px;height:143px;z-index:11;}
+    .p2-line1{left:173px;top:434px;width:405px;height:405px;}
+    .p2-line2{left:100px;top:541px;width:521px;height:239px;z-index:9;}
+    .p2-line3{left:146px;top:416px;width:446px;height:446px;z-index:8;}
 </style>
 </head>
 <body>
@@ -1093,22 +1111,119 @@ a {
     <div class="J_opaPannel pannels scene-2" data-index="1"
          style="">
         <div class="opa-stage stage" data-index="2" data-id="opa_stage_2"
-             style="background-image: url(http://img12.360buyimg.com/cms/s640x832_jfs/t925/134/552422787/58276/17230233/5535b871N11b21b8f.jpg); background-color: rgb(153, 153, 153);">
-            <div class="mc mc-image delay_0_0s duration_0_8s mi-zoomIn" data-type="image" data-anim="mi-zoomIn"
-                 data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517"
-                 data-position="1"
-                 style="left: 199.666666666667px; top: auto; z-index: 1; width: 248px; height: 58px; right: auto; bottom: 167.333374023437px; padding: 0px; background-image: none; background-color: transparent;"
-                 data-delay="0" data-out-anim="noAnimate">
-                <div class="mc-wrap delay_1_8s duration_0_8s noAnimate"
-                     style="position: absolute; left: 0px; top: 0px; width: 100%; height: 100%;"><a
-                        href="http://www.jd.com/" target="_blank"
-                        style="position: absolute; left: 0px; top: 0px; z-index: 9; width: 100%; height: 100%;"></a>
-
-                    <div class="img-wrap" style="width: 100%; height: 100%;"><img
-                            src="http://img12.360buyimg.com/cms/s248x58_jfs/t727/330/1361372642/2548/c9a7f495/5535b8afN7012393b.png" style="width: 100%; height: 100%; margin: 0px;">
+             style="background-image: url('../images/p2/p2_bg.jpg'); background-color: rgb(153, 153, 153);">
+            <div class="mc mc-image delay_0_0s duration_0_8s mi-zoomIn title" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
+                                        <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
+                                            <a href="http://www.jd.com/" target="_blank"></a>
+                                            <div class="img-wrap"><img src="../images/p2/title.png">
+                                            </div>
+                                        </div>
+                                    </div>
+            <div class="mc mc-image delay_0_0s duration_0_8s mi-zoomIn p2-cir1" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
+                <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
+                    <a href="http://www.jd.com/" target="_blank"></a>
+                    <div class="img-wrap"><img src="../images/p2/cir1_purple.png">
                     </div>
                 </div>
             </div>
+            <div class="mc mc-image delay_0_0s duration_0_8s mi-zoomIn p2-cir2" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
+                            <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
+                                <a href="http://www.jd.com/" target="_blank"></a>
+                                <div class="img-wrap"><img src="../images/p2/cir2_yellow.png">
+                                </div>
+                            </div>
+                        </div>
+            <div class="mc mc-image delay_0_0s duration_0_8s mi-zoomIn p2-cir3" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
+                            <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
+                                <a href="http://www.jd.com/" target="_blank"></a>
+                                <div class="img-wrap"><img src="../images/p2/cir3_green.png">
+                                </div>
+                            </div>
+                        </div>
+            <div class="mc mc-image delay_0_0s duration_0_8s mi-zoomIn p2-cir4" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
+                            <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
+                                <a href="http://www.jd.com/" target="_blank"></a>
+                                <div class="img-wrap"><img src="../images/p2/cir4_green_38.png">
+                                </div>
+                            </div>
+                        </div>
+            <div class="mc mc-image delay_0_0s duration_0_8s mi-zoomIn p2-cir5" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
+                            <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
+                                <a href="http://www.jd.com/" target="_blank"></a>
+                                <div class="img-wrap"><img src="../images/p2/cir5_purple_.png">
+                                </div>
+                            </div>
+                        </div>
+            <div class="mc mc-image delay_0_0s duration_0_8s mi-zoomIn p2-cir6" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
+                            <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
+                                <a href="http://www.jd.com/" target="_blank"></a>
+                                <div class="img-wrap"><img src="../images/p2/cir6_blue_.png">
+                                </div>
+                            </div>
+                        </div>
+            <div class="mc mc-image delay_0_0s duration_0_8s mi-zoomIn p2-cir7" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
+                            <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
+                                <a href="http://www.jd.com/" target="_blank"></a>
+                                <div class="img-wrap"><img src="../images/p2/cir7_blue_wifi_.png">
+                                </div>
+                            </div>
+                        </div>
+            <div class="mc mc-image delay_0_0s duration_0_8s mi-zoomIn p2-cir8" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
+                            <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
+                                <a href="http://www.jd.com/" target="_blank"></a>
+                                <div class="img-wrap"><img src="../images/p2/cir8_green_tech_.png">
+                                </div>
+                            </div>
+                        </div>
+            <div class="mc mc-image delay_0_0s duration_0_8s mi-zoomIn p2-cir9" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
+                            <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
+                                <a href="http://www.jd.com/" target="_blank"></a>
+                                <div class="img-wrap"><img src="../images/p2/cir9_oriange_zs_.png">
+                                </div>
+                            </div>
+                        </div>
+            <div class="mc mc-image delay_0_0s duration_0_8s mi-zoomIn p2-text1" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
+                            <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
+                                <a href="http://www.jd.com/" target="_blank"></a>
+                                <div class="img-wrap"><img src="../images/p2/text_wifi.png">
+                                </div>
+                            </div>
+                        </div>
+            <div class="mc mc-image delay_0_0s duration_0_8s mi-zoomIn p2-text2" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
+                                        <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
+                                            <a href="http://www.jd.com/" target="_blank"></a>
+                                            <div class="img-wrap"><img src="../images/p2/text_tech.png">
+                                            </div>
+                                        </div>
+                                    </div>
+            <div class="mc mc-image delay_0_0s duration_0_8s mi-zoomIn p2-text3" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
+                                        <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
+                                            <a href="http://www.jd.com/" target="_blank"></a>
+                                            <div class="img-wrap"><img src="../images/p2/text_zs.png">
+                                            </div>
+                                        </div>
+                                    </div>
+            <div class="mc mc-image delay_0_0s duration_0_8s mi-zoomIn p2-line1" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
+                                                    <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
+                                                        <a href="http://www.jd.com/" target="_blank"></a>
+                                                        <div class="img-wrap"><img src="../images/p2/line_1.png">
+                                                        </div>
+                                                    </div>
+                                                </div>
+            <div class="mc mc-image delay_0_0s duration_0_8s mi-zoomIn p2-line2" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
+                                                                <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
+                                                                    <a href="http://www.jd.com/" target="_blank"></a>
+                                                                    <div class="img-wrap"><img src="../images/p2/line_2.png">
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+            <div class="mc mc-image delay_0_0s duration_0_8s mi-zoomIn p2-line3" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
+                                                                <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
+                                                                    <a href="http://www.jd.com/" target="_blank"></a>
+                                                                    <div class="img-wrap"><img src="../images/p2/line_3.png">
+                                                                    </div>
+                                                                </div>
+                                                            </div>
         </div>
     </div>
 
@@ -1218,7 +1333,6 @@ a {
     var timer = setInterval(function(){
         num = parseInt(num + Math.random() * 10, 10);
         time++;
-
         if (num > 90) {
             num = 90;
         } else {
@@ -1226,7 +1340,7 @@ a {
         }
         if (time > 10) {
             clearInterval(timer);
-            loadOk();
+            loadOk();/* @fixme:loadOk逻辑要修改 */
         }
     }, 1000);
 
