--- a/hkhl/b2b.html
+++ b/hkhl/b2b.html
@@ -42,7 +42,7 @@
                     "img_width": "640",
                     "img_height": "640",
                     "link": window.location.href,
-                    "desc": "测试页， 点开看看",
+                    "desc": "分享到朋友圈的内容@张寒冰,@bernie206",
                     "title": "测试页"
                 }, function (res) {
                     _report('timeline', res.err_msg);
@@ -1387,7 +1387,7 @@ a {
 
 <a href="javascript:void(0);" class="u-guideTop z-move" id="J_GuideTop"></a>
 <script src="../js/app.utils.min.js"></script>
-<script src="../js/slide.min.js"></script>
+<script src="../js/fade.min.js"></script>
 
 
 <script>
