--- a/hkhl/b2b.html
+++ b/hkhl/b2b.html
@@ -1387,7 +1387,7 @@ a {
 
 <a href="javascript:void(0);" class="u-guideTop z-move" id="J_GuideTop"></a>
 <script src="../js/app.utils.min.js"></script>
-<script src="../js/fade.min.js"></script>
+<script src="../js/spread.min.js"></script>
 
 
 <script>
