--- a/hkhl/b2b.html
+++ b/hkhl/b2b.html
@@ -1063,25 +1063,16 @@ a {
     .p2-line1{left:173px;top:434px;width:405px;height:405px;}
     .p2-line2{left:100px;top:541px;width:521px;height:239px;z-index:9;}
     .p2-line3{left:146px;top:416px;width:446px;height:446px;z-index:8;}
-    .p2-cir{opacity: 0;transition:all .5s linear;/*transform: translate3d(0,0,0);*/}
-   /* .current .p2-cir1{left:539px;}
-    .current .p2-cir2{left:433px;}
-    .current .p2-cir3{left:657px;}
-    .current .p2-cir4{left:124px;}
-    .current .p2-cir5{left:548px;}
-    .current .p2-cir6{left:134px;}
-    .current .p2-cir7{left:124px;}
-    .current .p2-cir8{left:472px;}
-    .current .p2-cir9{left:240px;}*/
-    .current .p2-cir1{-webkit-animation: slideInLeft21 .8s 0s linear both;}
-    .current .p2-cir2{-webkit-animation: slideInLeft22 .8s 0s linear both;}
-    .current .p2-cir3{-webkit-animation: slideInLeft23 .8s 0s linear both;}
-    .current .p2-cir4{-webkit-animation: slideInLeft24 .8s 0s linear both;}
-    .current .p2-cir5{-webkit-animation: slideInLeft25 .8s 0s linear both;}
-    .current .p2-cir6{-webkit-animation: slideInLeft26 .8s 0s linear both;}
-    .current .p2-cir7{-webkit-animation: slideInLeft27 .8s 0s linear both;}
-    .current .p2-cir8{-webkit-animation: slideInLeft28 .8s 0s linear both;}
-    .current .p2-cir9{-webkit-animation: slideInLeft29 .8s 0s linear both;}
+    .p2-cir{opacity: 0;transition:all .5s linear;}
+    .current .p2-cir1{-webkit-animation: slideInLeft21 .5s 0s linear both;}
+    .current .p2-cir2{-webkit-animation: slideInLeft22 .5s 0s linear both;}
+    .current .p2-cir3{-webkit-animation: slideInLeft23 .5s 0s linear both;}
+    .current .p2-cir4{-webkit-animation: slideInLeft24 .5s 0s linear both;}
+    .current .p2-cir5{-webkit-animation: slideInLeft25 .5s 0s linear both;}
+    .current .p2-cir6{-webkit-animation: slideInLeft26 .5s 0s linear both;}
+    .current .p2-cir7{-webkit-animation: slideInLeft27 .5s 0s linear both;}
+    .current .p2-cir8{-webkit-animation: slideInLeft28 .5s 0s linear both;}
+    .current .p2-cir9{-webkit-animation: slideInLeft29 .5s 0s linear both;}
     .current .p2-cir{opacity: 1;}
     @-webkit-keyframes slideInLeft21{
     0%{-webkit-transform:translateX(-13px)}
@@ -1145,12 +1136,12 @@ a {
 .p-icon{z-index: 12}
 .p-text{z-index: 12}
 .current .p3-line{height: 666px;opacity: 1;}
-.current .p3-cir1{/*left: 127px;*//*width: 125px;height: 125px;*//*transform:translateX(0);*/-webkit-animation: slideInLeft .8s 0s linear both;}
-.current .p3-cir2{/*left: 420px;top:350px;*//*width: 150px;height: 150px;*//*transform:translateY(0);*/-webkit-animation: slideInTop .8s 0s linear both;}
-.current .p3-cir3{/*left: 559px;top:555px;*//*width: 136px;height: 136px;*//*transform:translateX(0);*/-webkit-animation: slideInLeft1 .8s 0s linear both;}
-.current .p3-cir4{/*left: 282px;top:581px;width: 200px;height: 200px;*//*transform:scale(1);*/-webkit-animation: scale1 .8s 0s linear both;}
-.current .p3-cir5{/*left: 104px;top:745px;*//*width: 150px;height: 150px;*//*transform:translateX(0);*/-webkit-animation: slideInLeft .8s 0s linear both;}
-.current .p3-cir6{/*left: 493px;top:844px;*//*width: 102px;height: 102px;*//*transform:translateX(0);*/-webkit-animation: slideInLeft1 .8s 0s linear both;}
+.current .p3-cir1{/*left: 127px;*//*width: 125px;height: 125px;*//*transform:translateX(0);*/-webkit-animation: slideInLeft .4s .2s ease-out both;}
+.current .p3-cir2{/*left: 420px;top:350px;*//*width: 150px;height: 150px;*//*transform:translateY(0);*/-webkit-animation: slideInTop .6s .3s ease-out both;}
+.current .p3-cir3{/*left: 559px;top:555px;*//*width: 136px;height: 136px;*//*transform:translateX(0);*/-webkit-animation: slideInLeft1 .5s .3s ease-out both;}
+.current .p3-cir4{/*left: 282px;top:581px;width: 200px;height: 200px;*//*transform:scale(1);*/-webkit-animation: scale1 .8s 0s ease-out both;}
+.current .p3-cir5{/*left: 104px;top:745px;*//*width: 150px;height: 150px;*//*transform:translateX(0);*/-webkit-animation: slideInLeft .8s .3s ease-out both;}
+.current .p3-cir6{/*left: 493px;top:844px;*//*width: 102px;height: 102px;*//*transform:translateX(0);*/-webkit-animation: slideInLeft1 .6s .2s ease-out both;}
 .current .p-cir{opacity: 1;/*transform:scale(1);*/}
 @-webkit-keyframes slideInLeft{
     0%{-webkit-transform:translateX(-50px)}
@@ -1307,49 +1298,49 @@ a {
                                 </div>
                             </div>
                         </div>
-            <div class="mc mc-image delay_0_5s duration_0_8s mi-zoomIn p2-text1" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
+            <div class="mc mc-image delay_0_5s duration_0_5s mi-zoomIn p2-text1" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
                             <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                                 <a href="http://www.jd.com/" target="_blank"></a>
                                 <div class="img-wrap"><img src="../images/p2/text_wifi.png">
                                 </div>
                             </div>
                         </div>
-            <div class="mc mc-image delay_0_5s duration_0_8s mi-zoomIn p2-text2" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
+            <div class="mc mc-image delay_0_5s duration_0_5s mi-zoomIn p2-text2" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
                                         <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                                             <a href="http://www.jd.com/" target="_blank"></a>
                                             <div class="img-wrap"><img src="../images/p2/text_tech.png">
                                             </div>
                                         </div>
                                     </div>
-            <div class="mc mc-image delay_0_5s duration_0_8s mi-zoomIn p2-text3" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
+            <div class="mc mc-image delay_0_5s duration_0_5s mi-zoomIn p2-text3" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
                                         <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                                             <a href="http://www.jd.com/" target="_blank"></a>
                                             <div class="img-wrap"><img src="../images/p2/text_zs.png">
                                             </div>
                                         </div>
                                     </div>
-            <div class="mc mc-image delay_0_0s duration_0_8s mi-zoomIn p2-line1" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
+            <div class="mc mc-image delay_0_0s duration_0_5s mi-zoomIn p2-line1" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
                                                     <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                                                         <a href="http://www.jd.com/" target="_blank"></a>
                                                         <div class="img-wrap"><img src="../images/p2/line_1.png">
                                                         </div>
                                                     </div>
                                                 </div>
-            <div class="mc mc-image delay_0_0s duration_0_8s mi-zoomIn p2-line2" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
+            <div class="mc mc-image delay_0_0s duration_0_5s mi-zoomIn p2-line2" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
                                                                 <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                                                                     <a href="http://www.jd.com/" target="_blank"></a>
                                                                     <div class="img-wrap"><img src="../images/p2/line_2.png">
                                                                     </div>
                                                                 </div>
                                                             </div>
-            <div class="mc mc-image delay_0_0s duration_0_8s mi-zoomIn p2-line3" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
+            <div class="mc mc-image delay_0_0s duration_0_5s mi-zoomIn p2-line3" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
                                                                 <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                                                                     <a href="http://www.jd.com/" target="_blank"></a>
                                                                     <div class="img-wrap"><img src="../images/p2/line_3.png">
                                                                     </div>
                                                                 </div>
                                                             </div>
-            <div class="mc mc-image delay_0_0s duration_0_8s mi-zoomIn p2-wifi" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
+            <div class="mc mc-image delay_0_0s duration_0_5s mi-zoomIn p2-wifi" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
                 <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                     wifi内容XXXXXXXX
                 </div>
@@ -1365,42 +1356,42 @@ a {
                                             </div>
                                         </div>
                                     </div>
-            <div class="mc mc-image delay_0_2s duration_0_4s p3-cir1 p-cir" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
+            <div class="mc mc-image p3-cir1 p-cir" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
                 <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                     <a href="http://www.jd.com/" target="_blank"></a>
                     <div class="img-wrap"><img src="../images/p3/cir1_purple.png">
                     </div>
                 </div>
             </div>
-            <div class="mc mc-image delay_0_3s duration_0_6s p3-cir2 p-cir" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
+            <div class="mc mc-image p3-cir2 p-cir" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
                             <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                                 <a href="http://www.jd.com/" target="_blank"></a>
                                 <div class="img-wrap"><img src="../images/p3/cir2_yellow.png">
                                 </div>
                             </div>
                         </div>
-            <div class="mc mc-image delay_0_3s duration_0_5s p3-cir3 p-cir" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
+            <div class="mc mc-image p3-cir3 p-cir" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
                             <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                                 <a href="http://www.jd.com/" target="_blank"></a>
                                 <div class="img-wrap"><img src="../images/p3/cir3_blue.png">
                                 </div>
                             </div>
                         </div>
-            <div class="mc mc-image delay_0_0s duration_1_0s p3-cir4 p-cir" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
+            <div class="mc mc-image p3-cir4 p-cir" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
                             <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                                 <a href="http://www.jd.com/" target="_blank"></a>
                                 <div class="img-wrap"><img src="../images/p3/cir4_green.png">
                                 </div>
                             </div>
                         </div>
-            <div class="mc mc-image delay_0_3s duration_0_8s p3-cir5 p-cir" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
+            <div class="mc mc-image p3-cir5 p-cir" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
                             <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                                 <a href="http://www.jd.com/" target="_blank"></a>
                                 <div class="img-wrap"><img src="../images/p3/cir5_greenblue.png">
                                 </div>
                             </div>
                         </div>
-            <div class="mc mc-image delay_0_2s duration_0_6s p3-cir6 p-cir" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
+            <div class="mc mc-image p3-cir6 p-cir" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
                             <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                                 <a href="http://www.jd.com/" target="_blank"></a>
                                 <div class="img-wrap"><img src="../images/p2/cir9_oriange_zs_.png">
